--- a/src/css/main_xc.css
+++ b/src/css/main_xc.css
@@ -1619,10 +1619,31 @@
         border: none;
         text-align: center;
         color: #333333;
-        width: 100px;
+        width: 140px;
         outline: none;
         line-height: 22px;
       }
+.xc-readCom-box .xc-readCom-paragraph .readCom-paragraph-num {
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      border: 1px solid #FF4548;
+      display: inline-block;
+      color: #FF4548;
+      -webkit-box-sizing: border-box;
+              box-sizing: border-box;
+      text-indent: 0;
+      line-height: 20px;
+      text-align: center;
+      margin-right: 5px;
+    }
+.xc-readCom-box .xc-readCom-paragraph .readCom-paragraph-item {
+      display: inline;
+      word-wrap: break-word;
+      text-indent: 0;
+      border-bottom: 1px solid rgba(255, 69, 72, 1);
+      white-space: wrap;
+    }
 .xc-readCom-box .xc-readCom-paragraph + .xc-readCom-paragraph {
   margin-top: 30px;
 }
@@ -1642,6 +1663,18 @@
 .xc-readCom-box .xc-readCom .intelText-blan-item > div {
   margin-bottom: 10px;
 }
+.xc-readCom-box .xc-writing-des {
+    width: 340px;
+    padding: 25px 20px;
+    margin-right: 15px;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    border-radius: 4px;
+    border: 1px solid rgba(235, 235, 235, 1);
+    color: #666666;
+    font-size: 14px;
+    line-height: 30px;
+  }
 .xc-readCom-box .xc-readCom-answer {
     border-radius: 4px;
     -webkit-box-flex: 1;
@@ -1667,6 +1700,72 @@
         }
 .xc-readCom-box .xc-readCom-answer .xc-coustom-pent + .xc-coustom-pent {
   margin-top: 5px;
+}
+.xc-readCom-box .xc-readCom-answer.xc-writing-box {
+  padding: 25px 20px;
+  min-height: 634px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+.xc-readCom-box .xc-readCom-answer.xc-writing-box .xc-writing-text {
+        width: 100%;
+        min-height: 100%;
+        line-height: 32px;
+        outline: none;
+        background: url('../img/write-text.jpg');
+        border: none;
+        font-size: 20px;
+        color: #999999;
+}
+.xc-readCom-box .xc-readCom-answer.xc-writing-box.xc-writing-check {
+  padding: 0px;
+  border: none;
+}
+.xc-readCom-box .xc-readCom-answer.xc-writing-box.xc-writing-check .xc-writing-list {
+          overflow: hidden;
+}
+.xc-readCom-box .xc-readCom-answer.xc-writing-box.xc-writing-check .xc-writing-list-item {
+          font-size: 16px;
+          line-height: 22px;
+          color: #999;
+          display: inline-block;
+          padding: 0 15px;
+          float: left;
+          cursor: pointer;
+}
+.xc-readCom-box .xc-readCom-answer.xc-writing-box.xc-writing-check .xc-writing-list-item.active {
+  color: #0085e6;
+}
+.xc-readCom-box .xc-readCom-answer.xc-writing-box.xc-writing-check .xc-writing-div {
+          margin-top: 20px;
+          padding: 20px;
+          line-height: 32px;
+          font-size: 20px;
+          color: rgba(102, 102, 102, 1);
+          min-height: calc(100% - 42px);
+          border-radius: 4px;
+          border: 1px solid rgba(235, 235, 235, 1);
+          -webkit-box-sizing: border-box;
+                  box-sizing: border-box;
+}
+.xc-readCom-box .xc-readCom-answer.xc-writing-box.xc-writing-check .xc-writing-boxs {
+          min-height: 100%;
+          background: url('../img/write-text.jpg');
+}
+.xc-readCom-box .xc-readCom-answer.xc-writing-box.xc-writing-check .xc-writing-boxs .xc-writing-box {
+            min-height: 100%;
+            display: block;
+            display: none;
+          }
+.xc-readCom-box .xc-readCom-answer.xc-writing-box.xc-writing-check .xc-writing-boxs .xc-writing-box .xc-writing-box-p {
+              font-size: 20px;
+              text-indent: 40px;
+            }
+.xc-readCom-box .xc-readCom-answer.xc-writing-box.xc-writing-check .xc-writing-boxs .xc-writing-box .xc-writing-box-p .xc-writing-box-error {
+                border-bottom: dashed 2px #FF4548;
+              }
+.xc-readCom-box .xc-readCom-answer.xc-writing-box.xc-writing-check .xc-writing-boxs .xc-writing-box.active {
+  display: block;
 }
 .xc-readCom-box .xc-readCom-inputs {
     display: -webkit-box;
@@ -1732,25 +1831,51 @@
 .xc-readCom-lists .xc-readCom-list + .xc-readCom-list {
   margin-top: 20px;
 }
-.xc-readCom-lists .xc-readCom-list-div {
-    display: inline-block;
-    border-bottom: 2px solid #0085e6;
-    text-indent: 0;
-  }
-.xc-readCom-lists .xc-readCom-list-input {
-    background: none;
-    border: none;
-    color: #333333;
-    width: 140px;
-    outline: none;
-    line-height: 22px;
-    text-indent: 5px;
-    font-weight: 600;
-  }
-.xc-readCom-lists .xc-readCom-list-num {
-    display: inline-block;
-    width: 20px;
-  }
+.xc-readCom-lists .xc-readCom-list .xc-readCom-list-div {
+      display: inline-block;
+      border-bottom: 2px solid #0085e6;
+      text-indent: 0;
+}
+.xc-readCom-lists .xc-readCom-list .xc-readCom-list-input {
+      background: none;
+      border: none;
+      color: #333333;
+      width: 140px;
+      outline: none;
+      line-height: 22px;
+      text-indent: 5px;
+      font-weight: 600;
+}
+.xc-readCom-lists .xc-readCom-list .xc-readCom-list-num {
+      display: inline-block;
+      width: 20px;
+}
+.xc-readCom-lists .xc-readCom-list.readCom-list-check {
+  margin-top: 0px;
+  padding-left: 40px;
+  background: url('../img/word_right.png') no-repeat left 5px;
+  background-size: 25px 25px;
+}
+.xc-readCom-lists .xc-readCom-list.readCom-list-check .xc-readCom-list-input {
+        color: #33CBB4;
+}
+.xc-readCom-lists .xc-readCom-list.readCom-list-check .list-check-des {
+        font-size: 14px;
+        line-height: 40px;
+        color: #999;
+        font-weight: 200;
+        display: inline-block;
+        margin-right: 20px;
+}
+.xc-readCom-lists .xc-readCom-list.readCom-list-check .list-check-des .list-check-type {
+          margin-right: 5px;
+        }
+.xc-readCom-lists .xc-readCom-list.readCom-list-check.readCom-list-check-error {
+  background-image: url('../img/word_fault.png');
+}
+.xc-readCom-lists .xc-readCom-list.readCom-list-check.readCom-list-check-error .xc-readCom-list-input {
+          color: #333333;
+}
 .xc-proplay {
   overflow: hidden;
   line-height: 50px;
@@ -1798,7 +1923,7 @@
   color: #0085e6;
 }
 .xc-error {
-  color: red;
+  color: #FF4548;
 }
 .xc-pdl30 {
   padding-left: 35px !important;
@@ -1806,4 +1931,127 @@
 .xc-des {
   color: #999;
   margin: 5px 0;
+}
+.readCom-answer-changs .readCom-answer-chang {
+    font-size: 0;
+    line-height: 28px;
+  }
+.readCom-answer-changs .readCom-answer-chang .answer-chang-num {
+      font-size: 14px;
+      color: #333333;
+      font-weight: 600;
+      display: inline-block;
+      width: 22px;
+    }
+.readCom-answer-changs .readCom-answer-chang .answer-chang-div {
+      display: inline-block;
+      width: 100px;
+      text-align: center;
+      line-height: 26px;
+      color: #333333;
+      border: 1px solid rgba(215, 215, 215, 1);
+      border-radius: 18px;
+      -webkit-box-sizing: border-box;
+              box-sizing: border-box;
+      font-size: 14px;
+      margin-right: 10px
+    }
+.readCom-answer-changs .readCom-answer-chang .answer-chang-div.answer-chang-select {
+  color: rgba(215, 215, 215, 1);
+  text-align: left;
+  text-indent: 10px;
+  background: url('../img/word-select.png') no-repeat right 10px center;
+  background-size: 10px auto;
+}
+.readCom-answer-changs .readCom-answer-chang .answer-chang-box {
+      font-size: 14px;
+      display: inline-block;
+      float: right;
+      vertical-align: top;
+    }
+.readCom-answer-changs .readCom-answer-chang .answer-chang-box .answer-chang-input{
+        width: 90px;
+        text-align: center;
+        background: none;
+        outline: none;
+        border: none;
+        line-height: 20px;
+        border-bottom: 2px solid #0085e6;
+        color: #999;
+      }
+.readCom-answer-changs .readCom-answer-chang + .readCom-answer-chang {
+  margin-top: 25px;
+}
+.readCom-answer-changs .readCom-answer-chang.answer-changs-check {
+  padding-left: 40px;
+  background: url('../img/word_right.png') no-repeat left 2px;
+  background-size: 25px 25px;
+}
+.readCom-answer-changs .readCom-answer-chang.answer-changs-check .answer-chang-box {
+        margin-right: 80px;
+}
+.readCom-answer-changs .readCom-answer-chang.answer-changs-check .answer-chang-box .answer-chang-input {
+          color: #33CBB4;
+        }
+.readCom-answer-changs .readCom-answer-chang.answer-changs-check .answer-chang-div {
+        color: #33CBB4;
+}
+.readCom-answer-changs .readCom-answer-chang.answer-changs-check .answer-chang-des {
+        line-height: 26px;
+        font-size: 14px;
+}
+.readCom-answer-changs .readCom-answer-chang.answer-changs-check .answer-chang-des .answer-chang-type {
+          margin-right: 10px;
+        }
+.readCom-answer-changs .readCom-answer-chang.answer-changs-check.answer-changs-error {
+  background-image: url('../img/word_fault.png');
+}
+.readCom-answer-changs .readCom-answer-chang.answer-changs-check.answer-changs-error .answer-chang-div {
+          color: #ff4548;
+}
+.readCom-answer-changs .readCom-answer-chang.answer-changs-check.answer-changs-error .answer-chang-box .answer-chang-input {
+            color: #ff4548;
+          }
+.xc-mt30 {
+  margin-top: 30px;
+}
+.xc-readCom-corrects .xc-readCom-correct {
+    line-height: 26px;
+    font-size: 0px;
+  }
+.xc-readCom-corrects .xc-readCom-correct .readCom-correct-img {
+      width: 26px;
+      height: 26px;
+      vertical-align: top;
+    }
+.xc-readCom-corrects .xc-readCom-correct .readCom-correct-num {
+      font-size: 14px;
+      color: #666;
+      display: inline-block;
+      margin-left: 15px;
+      min-width: 25px;
+    }
+.xc-readCom-corrects .xc-readCom-correct .readCom-correct-div {
+      line-height: 24px;
+      width: 95px;
+      text-align: center;
+      font-size: 14px;
+      color: #33CBB4;
+      border: 1px solid rgba(215, 215, 215, 1);
+      border-radius: 18px;
+      display: inline-block;
+    }
+.xc-readCom-corrects .xc-readCom-correct .readCom-correct-des {
+      color: #999999;
+      font-size: 14px;
+      margin-left: 30px;
+    }
+.xc-readCom-corrects .xc-readCom-correct .readCom-correct-des .readCom-correct-type {
+        margin-right: 5px;
+      }
+.xc-readCom-corrects .xc-readCom-correct.xc-readCom-correct-error .readCom-correct-div {
+        color: #FF4548;
+}
+.xc-readCom-corrects .xc-readCom-correct + .xc-readCom-correct {
+  margin-top: 10px;
 }
