--- a/src/css/main_linye.css
+++ b/src/css/main_linye.css
@@ -52,27 +52,73 @@ body {
   box-sizing: border-box;
 }
 
-.footer {
-  padding-top: 54px !important;
-  padding-bottom: 50px !important;
-}
-
 .linye-ranking-points span {
   display: inline-block;
 }
 
-ul,ol,li {
+ul {
   list-style: none;
   text-indent: 0;
 }
-a{
-  text-decoration:none;
+
+ol {
+  list-style: none;
+  text-indent: 0;
 }
+
+li {
+  list-style: none;
+  text-indent: 0;
+}
+
+a {
+  text-decoration: none;
+}
+.footer {
+  width: 100%;
+  background: #2b3845;
+  padding-top: 54px;
+  padding-bottom: 50px;
+}
+.footer .footer-ct {
+    width: 1200px;
+    margin: 0 auto;
+  }
+.footer .tel-wp {
+    text-align: center;
+    font-size: 25px;
+    color: #c8cccf;
+    margin-bottom: 22px;
+  }
+.footer .logo {
+    display: inline-block;
+    width: 164px;
+    margin-right: 48px;
+  }
+.footer .foot-tel {
+    width: 21px;
+    margin-right: 14px;
+  }
+.footer .ads-wp {
+    margin-bottom: 10px;
+    color: #717c83;
+    font-size: 14px;
+    text-align: center;
+  }
+.footer .ads-wp .name {
+      margin-right: 34px;
+    }
+.footer .record {
+    color: #717c83;
+    font-size: 14px;
+    text-align: center;
+  }
 .midd_header {
   margin: 0 auto;
 }
 .linye-ranking-points .wrap {
   background: #fafafb;
+  padding-bottom: 40px;
 }
 
 .linye-body {
@@ -111,7 +157,6 @@ a{
 .linye-ranking-points .tab-selectd {
   color: #0085e6;
 }
-
 .linye-ranking-points .tab-selectd::after {
   content: ' ';
   width: 100%;
@@ -159,7 +204,6 @@ a{
 
 .linye-ranking-points .search-name {
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(153, 153, 153, 1);
   line-height: 20px;
   margin-right: 40px;
@@ -229,9 +273,6 @@ a{
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
-}
-
-.linye-ranking-points .top-three-litem {
 }
 
 .linye-ranking-points .one-item {
@@ -309,25 +350,22 @@ a{
 
 .linye-ranking-points .top-three .nickname {
   font-size: 16px;
-  font-family: PingFangSC-Semibold;
   color: rgba(255, 255, 255, 1);
   line-height: 22px;
   text-align: center;
-  margin-top: 29rpx;
+  margin-top: 29px;
 }
 
 .linye-ranking-points .top-three .one-nickname {
   font-size: 16px;
-  font-family: PingFangSC-Semibold;
   color: rgba(255, 255, 255, 1);
   line-height: 22px;
   text-align: center;
-  margin-top: 26rpx;
+  margin-top: 26px;
 }
 
 .linye-ranking-points .top-three-integral {
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(255, 255, 255, 1);
   line-height: 20px;
   margin-top: 2px;
@@ -354,7 +392,6 @@ a{
       flex-shrink: 0;
   text-align: center;
   font-size: 14px;
-  font-family: PingFangSC-Semibold;
   color: rgba(102, 102, 102, 1);
   line-height: 20px;
   width: 20%;
@@ -392,7 +429,6 @@ a{
 
 .linye-ranking-points .tr-ranking {
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(102, 102, 102, 1);
   line-height: 20px;
 }
@@ -441,15 +477,9 @@ a{
 
 /*06积分商城*/
 
-ul,
-ol,
-li {
-  list-style: none;
-  text-indent: 0;
-}
-
 .linye-shopping .wrap {
   background: #fafafb;
+  padding-bottom: 40px;
 }
 
 .linye-shopping .my-detail {
@@ -487,7 +517,6 @@ li {
       -ms-flex-positive: 1;
           flex-grow: 1;
   font-size: 16px;
-  font-family: PingFangSC-Semibold;
   color: rgba(51, 51, 51, 1);
   line-height: 22px;
 }
@@ -548,11 +577,6 @@ li {
   height: 175px;
 }
 
-.linye-shopping .goods-img {
-  width: 180px;
-  height: 175px;
-}
-
 .linye-shopping .goods-name {
   padding: 18px 0 5px 16px;
   font-size: 14px;
@@ -585,7 +609,6 @@ li {
   background: rgba(0, 133, 230, 1);
   border-radius: 15px;
   font-size: 14px;
-  font-family: PingFangSC-Semibold;
   color: rgba(255, 255, 255, 1);
   line-height: 22px;
   text-align: center;
@@ -699,6 +722,7 @@ li {
 
 .linye-personal-data .wrap {
   background: #fafafb;
+  padding-bottom: 40px;
 }
 
 .linye-personal-data body {
@@ -753,7 +777,6 @@ li {
   background: rgba(78, 178, 250, 1);
   border-radius: 18px;
   font-size: 16px;
-  font-family: PingFangSC-Regular;
   color: rgba(255, 255, 255, 1);
   line-height: 32px;
   text-align: center;
@@ -819,7 +842,6 @@ li {
 
 .linye-personal-data .detail-content {
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(51, 51, 51, 1);
   line-height: 20px;
 }
@@ -1012,6 +1034,7 @@ li {
 
 .linye-change-password .wrap {
   background: #fafafb;
+  padding-bottom: 40px;
 }
 
 .linye-change-password body {
@@ -1024,7 +1047,6 @@ li {
   background: rgba(0, 133, 230, 1);
   border-radius: 8px 8px 0 0;
   font-size: 20px;
-  font-family: PingFangSC-Semibold;
   color: rgba(255, 255, 255, 1);
   line-height: 28px;
   padding: 10px 30px;
@@ -1092,7 +1114,6 @@ li {
 
 .linye-change-password .progress-name {
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(153, 153, 153, 1);
   line-height: 20px;
   position: absolute;
@@ -1213,6 +1234,7 @@ li {
 
 .linye-honour .wrap {
   background: #fafafb;
+  padding-bottom: 40px;
 }
 
 .linye-honour body {
@@ -1430,7 +1452,6 @@ li {
 .linye-honour .rank-num {
   text-align: center;
   font-size: 16px;
-  font-family: PingFangSC-Regular;
   color: rgba(51, 51, 51, 1);
   line-height: 22px;
   margin-top: 54px;
@@ -1442,7 +1463,6 @@ li {
   margin-top: 11px;
   vertical-align: middle;
   font-size: 12px;
-  font-family: PingFangSC-Regular;
   color: rgba(51, 139, 203, 1);
   line-height: 17px;
 }
@@ -1471,7 +1491,6 @@ li {
   margin-top: 11px;
   text-align: center;
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(153, 153, 153, 1);
   line-height: 20px;
 }
@@ -1499,6 +1518,7 @@ li {
 
 .linye-finish .wrap {
   background: #fafafb;
+  padding-bottom: 40px;
 }
 
 .linye-finish body {
@@ -1521,7 +1541,6 @@ li {
 }
 .linye-finish .book-name {
   font-size: 20px;
-  font-family: PingFangSC-Semibold;
   color: rgba(0, 133, 230, 1);
   line-height: 28px;
   margin-right: 16px;
@@ -1543,7 +1562,6 @@ li {
 }
 .linye-finish .back {
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(0, 133, 230, 1);
   line-height: 20px;
   text-align: right;
@@ -1620,7 +1638,6 @@ li {
       -ms-flex-positive: 1;
           flex-grow: 1;
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(102, 102, 102, 1);
   line-height: 20px;
   vertical-align: middle;
@@ -1758,7 +1775,6 @@ li {
 }
 .linye-finish .reword-tip2 {
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(153, 153, 153, 1);
   line-height: 20px;
   margin-top: 2px;
@@ -1797,6 +1813,7 @@ li {
 
 .linye-learn .wrap {
   background: #fafafb;
+  padding-bottom: 40px;
 }
 
 .linye-learn body {
@@ -1833,7 +1850,6 @@ li {
 }
 .linye-learn .book-name {
   font-size: 20px;
-  font-family: PingFangSC-Semibold;
   color: rgba(0, 133, 230, 1);
   line-height: 28px;
   margin-right: 30px;
@@ -1853,7 +1869,6 @@ li {
 }
 .linye-learn .back {
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(0, 133, 230, 1);
   line-height: 20px;
   text-align: right;
@@ -1884,7 +1899,6 @@ li {
 
 .linye-learn .head-bottom-text1 {
   font-size: 16px;
-  font-family: PingFangSC-Regular;
   color: rgba(102, 102, 102, 1);
   line-height: 22px;
   margin-right: 30px;
@@ -1893,7 +1907,6 @@ li {
 }
 .linye-learn .head-bottom-text2 {
   font-size: 16px;
-  font-family: PingFangSC-Regular;
   color: rgba(102, 102, 102, 1);
   line-height: 22px;
   margin-left: 30px;
@@ -1905,7 +1918,6 @@ li {
 .linye-learn .rank-progress {
   vertical-align: middle;
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(102, 102, 102, 1);
   line-height: 20px;
   -ms-flex-negative: 0;
@@ -1936,7 +1948,6 @@ li {
   margin-top: 11px;
   text-align: center;
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(153, 153, 153, 1);
   line-height: 20px;
 }
@@ -1962,7 +1973,6 @@ li {
   background: rgba(0, 133, 230, 1);
   border-radius: 8px 8px 0 0;
   font-size: 20px;
-  font-family: PingFangSC-Semibold;
   color: rgba(255, 255, 255, 1);
   line-height: 28px;
   padding: 10px 30px;
@@ -1979,7 +1989,6 @@ li {
 }
 .linye-learn .classroom-title {
   font-size: 20px;
-  font-family: PingFangSC-Semibold;
   color: rgba(51, 51, 51, 1);
   line-height: 28px;
   font-weight: bold;
@@ -1993,7 +2002,6 @@ li {
 }
 .linye-learn .knowlage-item {
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(102, 102, 102, 1);
   line-height: 32px;
   vertical-align: middle;
@@ -2008,25 +2016,21 @@ li {
 }
 .linye-learn .knowlage-input::-webkit-input-placeholder {
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(153, 153, 153, 1);
   line-height: 20px;
 }
 .linye-learn .knowlage-input:-ms-input-placeholder {
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(153, 153, 153, 1);
   line-height: 20px;
 }
 .linye-learn .knowlage-input::-ms-input-placeholder {
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(153, 153, 153, 1);
   line-height: 20px;
 }
 .linye-learn .knowlage-input::placeholder {
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(153, 153, 153, 1);
   line-height: 20px;
 }
@@ -2102,14 +2106,12 @@ li {
        appearance: none;
   -webkit-appearance: none;
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(102, 102, 102, 1);
   line-height: 20px;
   margin-left: 10px;
 }
 .linye-learn .type-text {
   font-size: 16px;
-  font-family: PingFangSC-Semibold;
   color: rgba(0, 133, 230, 1);
   line-height: 22px;
   vertical-align: middle;
@@ -2197,7 +2199,6 @@ li {
 }
 .linye-learn .study-title-text {
   font-size: 16px;
-  font-family: PingFangSC-Semibold;
   color: rgba(51, 51, 51, 1);
   line-height: 22px;
 }
@@ -2210,7 +2211,6 @@ li {
 }
 .linye-learn .study-content-text {
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(102, 102, 102, 1);
   line-height: 20px;
 }
