--- a/src/less/main_linye.less
+++ b/src/less/main_linye.less
@@ -52,27 +52,80 @@ body {
   box-sizing: border-box;
 }
 
-.footer {
-  padding-top: 54px !important;
-  padding-bottom: 50px !important;
-}
-
 .linye-ranking-points span {
   display: inline-block;
 }
 
-ul,ol,li {
+ul {
   list-style: none;
   text-indent: 0;
 }
-a{
-  text-decoration:none;
+
+ol {
+  list-style: none;
+  text-indent: 0;
+}
+
+li {
+  list-style: none;
+  text-indent: 0;
+}
+
+a {
+  text-decoration: none;
+}
+.footer {
+  width: 100%;
+  background: #2b3845;
+  padding-top: 54px;
+  padding-bottom: 50px;
+
+  .footer-ct {
+    width: 1200px;
+    margin: 0 auto;
+  }
+
+  .tel-wp {
+    text-align: center;
+    font-size: 25px;
+    color: #c8cccf;
+    margin-bottom: 22px;
+  }
+
+  .logo {
+    display: inline-block;
+    width: 164px;
+    margin-right: 48px;
+  }
+
+  .foot-tel {
+    width: 21px;
+    margin-right: 14px;
+  }
+
+  .ads-wp {
+    margin-bottom: 10px;
+    color: #717c83;
+    font-size: 14px;
+    text-align: center;
+
+    .name {
+      margin-right: 34px;
+    }
+  }
+
+  .record {
+    color: #717c83;
+    font-size: 14px;
+    text-align: center;
+  }
 }
 .midd_header {
   margin: 0 auto;
 }
 .linye-ranking-points .wrap {
   background: #fafafb;
+  padding-bottom: 40px;
 }
 
 .linye-body {
@@ -106,7 +159,6 @@ a{
 .linye-ranking-points .tab-selectd {
   color: #0085e6;
 }
-
 .linye-ranking-points .tab-selectd::after {
   content: ' ';
   width: 100%;
@@ -149,7 +201,6 @@ a{
 
 .linye-ranking-points .search-name {
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(153, 153, 153, 1);
   line-height: 20px;
   margin-right: 40px;
@@ -205,9 +256,6 @@ a{
 .linye-ranking-points .top-three {
   display: flex;
   align-items: flex-end;
-}
-
-.linye-ranking-points .top-three-litem {
 }
 
 .linye-ranking-points .one-item {
@@ -283,25 +331,22 @@ a{
 
 .linye-ranking-points .top-three .nickname {
   font-size: 16px;
-  font-family: PingFangSC-Semibold;
   color: rgba(255, 255, 255, 1);
   line-height: 22px;
   text-align: center;
-  margin-top: 29rpx;
+  margin-top: 29px;
 }
 
 .linye-ranking-points .top-three .one-nickname {
   font-size: 16px;
-  font-family: PingFangSC-Semibold;
   color: rgba(255, 255, 255, 1);
   line-height: 22px;
   text-align: center;
-  margin-top: 26rpx;
+  margin-top: 26px;
 }
 
 .linye-ranking-points .top-three-integral {
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(255, 255, 255, 1);
   line-height: 20px;
   margin-top: 2px;
@@ -321,7 +366,6 @@ a{
   flex-shrink: 0;
   text-align: center;
   font-size: 14px;
-  font-family: PingFangSC-Semibold;
   color: rgba(102, 102, 102, 1);
   line-height: 20px;
   width: 20%;
@@ -348,7 +392,6 @@ a{
 
 .linye-ranking-points .tr-ranking {
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(102, 102, 102, 1);
   line-height: 20px;
 }
@@ -397,15 +440,9 @@ a{
 
 /*06积分商城*/
 
-ul,
-ol,
-li {
-  list-style: none;
-  text-indent: 0;
-}
-
 .linye-shopping .wrap {
   background: #fafafb;
+  padding-bottom: 40px;
 }
 
 .linye-shopping .my-detail {
@@ -436,7 +473,6 @@ li {
 .linye-shopping .my-money {
   flex-grow: 1;
   font-size: 16px;
-  font-family: PingFangSC-Semibold;
   color: rgba(51, 51, 51, 1);
   line-height: 22px;
 }
@@ -493,11 +529,6 @@ li {
   height: 175px;
 }
 
-.linye-shopping .goods-img {
-  width: 180px;
-  height: 175px;
-}
-
 .linye-shopping .goods-name {
   padding: 18px 0 5px 16px;
   font-size: 14px;
@@ -524,7 +555,6 @@ li {
   background: rgba(0, 133, 230, 1);
   border-radius: 15px;
   font-size: 14px;
-  font-family: PingFangSC-Semibold;
   color: rgba(255, 255, 255, 1);
   line-height: 22px;
   text-align: center;
@@ -628,6 +658,7 @@ li {
 
 .linye-personal-data .wrap {
   background: #fafafb;
+  padding-bottom: 40px;
 }
 
 .linye-personal-data body {
@@ -673,7 +704,6 @@ li {
   background: rgba(78, 178, 250, 1);
   border-radius: 18px;
   font-size: 16px;
-  font-family: PingFangSC-Regular;
   color: rgba(255, 255, 255, 1);
   line-height: 32px;
   text-align: center;
@@ -733,7 +763,6 @@ li {
 
 .linye-personal-data .detail-content {
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(51, 51, 51, 1);
   line-height: 20px;
 }
@@ -891,6 +920,7 @@ li {
 
 .linye-change-password .wrap {
   background: #fafafb;
+  padding-bottom: 40px;
 }
 
 .linye-change-password body {
@@ -903,7 +933,6 @@ li {
   background: rgba(0, 133, 230, 1);
   border-radius: 8px 8px 0 0;
   font-size: 20px;
-  font-family: PingFangSC-Semibold;
   color: rgba(255, 255, 255, 1);
   line-height: 28px;
   padding: 10px 30px;
@@ -960,7 +989,6 @@ li {
 
 .linye-change-password .progress-name {
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(153, 153, 153, 1);
   line-height: 20px;
   position: absolute;
@@ -1060,6 +1088,7 @@ li {
 
 .linye-honour .wrap {
   background: #fafafb;
+  padding-bottom: 40px;
 }
 
 .linye-honour body {
@@ -1250,7 +1279,6 @@ li {
 .linye-honour .rank-num {
   text-align: center;
   font-size: 16px;
-  font-family: PingFangSC-Regular;
   color: rgba(51, 51, 51, 1);
   line-height: 22px;
   margin-top: 54px;
@@ -1262,7 +1290,6 @@ li {
   margin-top: 11px;
   vertical-align: middle;
   font-size: 12px;
-  font-family: PingFangSC-Regular;
   color: rgba(51, 139, 203, 1);
   line-height: 17px;
 }
@@ -1291,7 +1318,6 @@ li {
   margin-top: 11px;
   text-align: center;
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(153, 153, 153, 1);
   line-height: 20px;
 }
@@ -1319,6 +1345,7 @@ li {
 
 .linye-finish .wrap {
   background: #fafafb;
+  padding-bottom: 40px;
 }
 
 .linye-finish body {
@@ -1336,7 +1363,6 @@ li {
 }
 .linye-finish .book-name {
   font-size: 20px;
-  font-family: PingFangSC-Semibold;
   color: rgba(0, 133, 230, 1);
   line-height: 28px;
   margin-right: 16px;
@@ -1355,7 +1381,6 @@ li {
 }
 .linye-finish .back {
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(0, 133, 230, 1);
   line-height: 20px;
   text-align: right;
@@ -1419,7 +1444,6 @@ li {
 .linye-finish .class-type1 {
   flex-grow: 1;
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(102, 102, 102, 1);
   line-height: 20px;
   vertical-align: middle;
@@ -1540,7 +1564,6 @@ li {
 }
 .linye-finish .reword-tip2 {
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(153, 153, 153, 1);
   line-height: 20px;
   margin-top: 2px;
@@ -1579,6 +1602,7 @@ li {
 
 .linye-learn .wrap {
   background: #fafafb;
+  padding-bottom: 40px;
 }
 
 .linye-learn body {
@@ -1604,7 +1628,6 @@ li {
 }
 .linye-learn .book-name {
   font-size: 20px;
-  font-family: PingFangSC-Semibold;
   color: rgba(0, 133, 230, 1);
   line-height: 28px;
   margin-right: 30px;
@@ -1623,7 +1646,6 @@ li {
 }
 .linye-learn .back {
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(0, 133, 230, 1);
   line-height: 20px;
   text-align: right;
@@ -1649,7 +1671,6 @@ li {
 
 .linye-learn .head-bottom-text1 {
   font-size: 16px;
-  font-family: PingFangSC-Regular;
   color: rgba(102, 102, 102, 1);
   line-height: 22px;
   margin-right: 30px;
@@ -1657,7 +1678,6 @@ li {
 }
 .linye-learn .head-bottom-text2 {
   font-size: 16px;
-  font-family: PingFangSC-Regular;
   color: rgba(102, 102, 102, 1);
   line-height: 22px;
   margin-left: 30px;
@@ -1668,7 +1688,6 @@ li {
 .linye-learn .rank-progress {
   vertical-align: middle;
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(102, 102, 102, 1);
   line-height: 20px;
   flex-shrink: 0;
@@ -1698,7 +1717,6 @@ li {
   margin-top: 11px;
   text-align: center;
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(153, 153, 153, 1);
   line-height: 20px;
 }
@@ -1723,7 +1741,6 @@ li {
   background: rgba(0, 133, 230, 1);
   border-radius: 8px 8px 0 0;
   font-size: 20px;
-  font-family: PingFangSC-Semibold;
   color: rgba(255, 255, 255, 1);
   line-height: 28px;
   padding: 10px 30px;
@@ -1740,7 +1757,6 @@ li {
 }
 .linye-learn .classroom-title {
   font-size: 20px;
-  font-family: PingFangSC-Semibold;
   color: rgba(51, 51, 51, 1);
   line-height: 28px;
   font-weight: bold;
@@ -1754,7 +1770,6 @@ li {
 }
 .linye-learn .knowlage-item {
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(102, 102, 102, 1);
   line-height: 32px;
   vertical-align: middle;
@@ -1769,7 +1784,6 @@ li {
 }
 .linye-learn .knowlage-input::placeholder {
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(153, 153, 153, 1);
   line-height: 20px;
 }
@@ -1841,14 +1855,12 @@ li {
   appearance: none;
   -webkit-appearance: none;
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(102, 102, 102, 1);
   line-height: 20px;
   margin-left: 10px;
 }
 .linye-learn .type-text {
   font-size: 16px;
-  font-family: PingFangSC-Semibold;
   color: rgba(0, 133, 230, 1);
   line-height: 22px;
   vertical-align: middle;
@@ -1925,7 +1937,6 @@ li {
 }
 .linye-learn .study-title-text {
   font-size: 16px;
-  font-family: PingFangSC-Semibold;
   color: rgba(51, 51, 51, 1);
   line-height: 22px;
 }
@@ -1938,7 +1949,6 @@ li {
 }
 .linye-learn .study-content-text {
   font-size: 14px;
-  font-family: PingFangSC-Regular;
   color: rgba(102, 102, 102, 1);
   line-height: 20px;
 }
