--- a/src/less/main_momo.less
+++ b/src/less/main_momo.less
@@ -843,7 +843,7 @@
   border-radius: 18px;
   border: 1px solid rgba(215, 215, 215, 1);
   font-size: 14px;
-  text-indent: 2em;
+  text-indent: 2rem;
   color: rgba(51, 51, 51, 1);
   line-height: 20px;
 }
@@ -911,11 +911,18 @@
   margin-top: 30px;
 }
 
+.body-preview > .wrap {
+  padding-bottom: 80px;
+}
+
 .submit-b {
   width: 100%;
   height: 64px;
   background:rgba(255, 255, 255, 1);
   box-shadow: 0px -4px 8px 0px rgba(0, 0, 0, 0.05);
+  position: fixed;
+  bottom: 0;
+  left: 0;
 }
 
 .submit-test {
